# Laboratorio_Programmazione

./: CMakeLists.txt  main.cpp
ListaSpesa/: ListaSpesa.cpp  ListaSpesa.h
ObserverPattern/: Observer.h  Subject.h
Oggetto/: Oggetto.cpp  Oggetto.h
Utente/: Utente.cpp  Utente.h
test/: CMakeLists.txt  ListaSpesaTest.cpp  OggettoTest.cpp  UtenteTest.cpp  runAllTests.cpp
